Demarshalling bean objects Relevant Exceptions Config and Utility classes Test resources.